--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ dependencies = [
     "pydantic", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
     "gradio==4.16.0", "gradio_client==0.8.1",
     "requests", "httpx==0.24.0", "uvicorn", "fastapi",
-    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13", "h5py", "wandb"
+    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13", "h5py", "wandb", 
+    "ray", "bayesian-optimization"
 ]
 
 [project.optional-dependencies]
